--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -13,6 +13,11 @@ jobs:
       - name: Checkout do código
         uses: actions/checkout@v3
 
+      - name: Configurar Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
       - name: Configurar Python
         uses: actions/setup-python@v4
         with:
