--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -23,9 +23,9 @@ jobs:
         with:
           python-version: '3.9'
 
-      - name: Instalar dependências
+      - name: Instalar dependências Python
         run: |
-          echo "Instalando dependências..."
+          echo "Instalando dependências Python..."
           python -m pip install --upgrade pip
           pip install openai
 
