--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -5,40 +5,41 @@ on:
     paths:
       - 'pasta/arquivo_pt.json'  # Ajuste o caminho conforme necessário
 
+permissions:
+  contents: write  # Concede permissões de leitura e escrita no conteúdo do repositório
+
 jobs:
   translate:
     runs-on: ubuntu-latest
 
     steps:
-      # Passo 1: Checkout do código
       - name: Checkout do código
         uses: actions/checkout@v3
 
-      # Passo 2: Configurar Node.js versão 20
+      - name: Verificar Remote Git
+        run: |
+          git remote -v
+
       - name: Configurar Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20'
 
-      # Passo 3: Configurar Python versão 3.9
       - name: Configurar Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
 
-      # Passo 4: Instalar dependências Python
       - name: Instalar dependências Python
         run: |
           echo "Instalando dependências Python..."
           python -m pip install --upgrade pip
-          pip install openai==0.28.0 python-dotenv
+          pip install openai==0.28 python-dotenv
 
-      # Passo 5: Verificar versão do openai
       - name: Verificar versão do openai
         run: |
           pip show openai
 
-      # Passo 6: Verificar variável de ambiente OPENAI_API_KEY
       - name: Verificar variável de ambiente OPENAI_API_KEY
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
@@ -50,7 +51,6 @@ jobs:
             echo "OPENAI_API_KEY está definida. Primeiros 4 caracteres: ${OPENAI_API_KEY:0:4}****"
           fi
 
-      # Passo 7: Executar o script de tradução
       - name: Executar tradução
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
@@ -59,13 +59,11 @@ jobs:
           python translate.py
           echo "Script de tradução concluído."
 
-      # Passo 8: Configurar Git para commit
       - name: Configurar Git
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      # Passo 9: Commit e Push das traduções
       - name: Commit e Push das traduções
         run: |
           echo "Adicionando arquivos traduzidos..."
